# g1_five_hand

humanoid_hand-devel_new (1)/humanoid_hand-devel_new/dex_retargeting_wrapper/: package.xml
humanoid_hand-devel_new (1)/humanoid_hand-devel_new/humanoid_hand_controller/: inspire_hand_modbus使用方法.txt  setup.py
humanoid_hand-devel_new (1)/humanoid_hand-devel_new/humanoid_hand_controller/humanoid_hand_controller/: gestures.py  hand.py
humanoid_hand-devel_new (1)/humanoid_hand-devel_new/service_interfaces/: package.xml
humanoid_hand-devel_new (1)/humanoid_hand-devel_new/service_interfaces/msg/: GetAngleAct1.msg  GetForceAct1.msg  GetTemp1.msg  GetTouchAct1.msg  SetAngle1.msg  SetSpeed1.msg
humanoid_hand-devel_new (1)/humanoid_hand-devel_new/service_interfaces/srv/: Getangleact.srv  Getangleset.srv  Getcurrentact.srv  Geterror.srv  Getforceact.srv  Getforceset.srv  Getposact.srv  Getposset.srv  Getspeedset.srv  Getstatus.srv  Setdefaultforce.srv  Setforce.srv  Setid.srv  Setreduratio.srv  Setuserdefangle.srv
humanoid_hand-devel_new/humanoid_hand-devel_new/: README.md  config.yaml  requirements.txt
humanoid_hand-devel_new/humanoid_hand-devel_new/dex_retargeting_wrapper/: setup.cfg  setup.py
humanoid_hand-devel_new/humanoid_hand-devel_new/dex_retargeting_wrapper/dex_retargeting_wrapper/nodes/: realtime_retargeting_ros.py
humanoid_hand-devel_new/humanoid_hand-devel_new/humanoid_hand_controller/: inspire_hand_serial使用方法.txt  package.xml  setup.cfg
humanoid_hand-devel_new/humanoid_hand-devel_new/humanoid_hand_controller/humanoid_hand_controller/: multi_sensor.py  utils.py
humanoid_hand-devel_new/humanoid_hand-devel_new/service_interfaces/: CMakeLists.txt
humanoid_hand-devel_new/humanoid_hand-devel_new/service_interfaces/msg/: SetForce1.msg
humanoid_hand-devel_new/humanoid_hand-devel_new/service_interfaces/srv/: Gettemp.srv  Setangle.srv  Setclearerror.srv  Setcurrentlimit.srv  Setdefaultspeed.srv  Setforceclb.srv  Setgestureno.srv  Setpos.srv  Setresetpara.srv  Setsaveflash.srv  Setspeed.srv
